--- a/VSM/index.html
+++ b/VSM/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="http://practitioner.kaizenacademy.education/Tcia.ico" />
+    <link rel="icon" type="image/x-icon" href="https://practitioner.kaizenacademy.education/Tcia.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VSM Calculator - Kaizen Academy</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
