--- a/index.html
+++ b/index.html
@@ -261,7 +261,9 @@
       <div class="container">
         <div class="header-content">
           <div class="logo-section">
-            <div class="logo">KA</div>
+            <div class="logo">
+              <img src="https://practitioner.kaizenacademy.education/Tcia.ico" alt="Kaizen Academy" style="width: 32px; height: 32px; border-radius: 6px;">
+            </div>
             <div>
               <h1 style="margin: 0; font-size: 1.5rem;">Kaizen Academy</h1>
               <p style="margin: 4px 0 0 0; font-size: 0.875rem; color: #ccc;">Professional Toolkit for Continuous Improvement</p>
